--- a/AHBC_Question2/Content/Site.css
+++ b/AHBC_Question2/Content/Site.css
@@ -1,7 +1,6 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+﻿p1 {
+    background-color:yellow;
+   }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
